<resources>
    <string name="app_id">1475510096106022</string>
    <string name="mapKey">9cbe6c3f5103f98dca9327f167883dd0</string>
    <string name="app_name">왓슈</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_refresh_location">위치 재설정</string>
    <string name="main_personal_notice">* 복수 선택 가능합니다.</string>
    <string name="title_text">구두 수선</string>
    <string name="title_activity_pay">주문내역 확인 및 결제</string>
    <string name="title_activity_loading">왓슈</string>
    <string name="pay_notice">* 주문 취소는 15분 이내에만 가능합니다.</string>
    <string name="pay_with_point">포인트 결제</string>
    <string name="pay_with_phone">휴대폰 소액 결제</string>
    <string name="pay_with_card">카드 결제</string>
    <string name="pay_at_place">현장 결제</string>
    <string name="cancel_order">주문 취소</string>
    <string name="total_pay">총 결제 금액</string>
    <string name="address_guide"> 상세 주소를 입력해 주세요. (ex : 왓슈빌딩 1층)</string>
    <string name="wash_shoes">구두 닦기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="loginFacebookButton">페이스북으로 왓슈</string>
    <string name="loginButton">로그인</string>
    <string name="singleOrderText">혼자 왓슈</string>
    <string name="groupOrderText">단체로 왓슈</string>
    <string name="buyBtnText">장 소 선 택</string>
    <string name="locationBtnText">장소 선택 완료</string>
    <string name="service_title">위치 알려주기</string>
    <string name="search_title">위치 검색</string>
    <string name="service_subtitle1">어딨슈</string>
    <string name="join_ws_button">회원가입</string>
    <string name="lost_pw_button">비밀번호 찾기</string>
    <string name="login_id_hint">"  아이디를 입력 해 주세요."</string>
    <string name="login_pw_hint">"  패스워드를 입력 해 주세요."</string>
    <string name="go_service">왓슈 서비스 바로가기</string>
    <string name="title_main">왓슈</string>
    <string name="title_service">왓슈</string>
    <string name="dialog_totalprice">구두 수선 총 예상 금액</string>
    <string name="content1">내 구두를 지켜줘\n슈트리</string>
    <string name="content2">내 발에 맞는\n올바른 신발 선택 방법</string>
    <string name="content3">명품 구두\n오래 신는 노하우</string>
    <string name="content4">패션의 완성은 얼굴...\n얼굴을 완성시키는 건 구두</string>
    <string name="title_activity_content_detail">ContentDetailActivity</string>
    <string name="location_cannot_search_alert">현재 위치가 확인되지 않습니다.</string>
    <string name="service_gift_upper">소중한 사람에게 왓슈 서비스를</string>
    <string name="service_gift_under">해보세요.</string>
    <string name="premium_service_notice">PREMIUM\n추후 서비스 예정입니다.</string>
    <string name="title_section1">이용약관</string>
    <string name="title_section2">개인정보 취급방침</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="forman_title">신사의 구두 수선</string>
    <string name="forman_fix_wash">구두 닦이</string>
    <string name="forman_fix_whole">남자 통굽갈이</string>
    <string name="forman_fix_half">남자 반창덧댐</string>
    <string name="forman_fix_sub">남자 보조굽</string>
    <string name="forman_fix_wash_menu">구두 닦이\n(5,000원)</string>
    <string name="forman_fix_whole_menu">남자 통굽갈이\n(18,000원)</string>
    <string name="forman_fix_half_menu">남자 반창덧댐\n(15,000원)</string>
    <string name="forman_fix_sub_menu">남자 보조굽\n(15,000원)</string>
    <string name="forman_socks">+ 남자양말 무료배달\n(3,000원/Black)</string>
    <string name="etc">기타 및 특수주문(현장 결제)</string>
    <string name="forwoman_title">숙녀의 구두 수선</string>
    <string name="forwoman_fix_sub">여자 보조굽(소)</string>
    <string name="forwoman_fix_submid">여자 보조굽(중)</string>
    <string name="forwoman_fix_subbig">여자 보조굽(대)</string>
    <string name="forwoman_fix_wash_menu">구두 닦이\n(5,000원)</string>
    <string name="forwoman_fix_sub_menu">여자 보조굽(소)\n(5,000원)</string>
    <string name="forwoman_fix_submid_menu">여자 보조굽(중)\n(6,000원)</string>
    <string name="forwoman_fix_subbig_menu">여자 보조굽(대)\n(7,000원)</string>
    <string name="forwoman_stocking">+ 스타킹 무료배달\n(4,000원/Black)</string>
    <string name="forwoman_band">+ 대일밴드 무료배달\n(0원)</string>
    <string name="forwoman_submidbig_menu">여자 보조굽(중/대)\n(7,000원)</string>
    <string name="forwoman_half">반창 덧댐\n(12,000원)</string>
    <string name="forwoman_boots">부츠케어\n(12,000원)</string>
    <string name="after_order">(현장)\n상담 후 결재</string>
    <string name="pre_shoe_full_man">프리미엄 슈 풀케어\n(25,000원)</string>
    <string name="pre_deep_shoecare_man">프리미엄 슈 딥케어\n(30,000원)</string>
    <string name="pre_heel_mid_man">프리미엄 뒷굽갈이\n(중)(30,000원)</string>
    <string name="pre_heel_big_man">프리미엄 뒷굽갈이\n(대)(35,000원)</string>
    <string name="pre_vibram_heel_man">Vibram 뒷굽갈이\n(50,000원)</string>
    <string name="pre_soles_rubber_man">프리미엄 반창갈이\n(고무)(30,000원)</string>
    <string name="pre_vibram_soles_man">Vibram 반창갈이\n(고무)(40,000원)</string>
    <string name="pre_allsoles_man">전창갈이(고무)\n(128,000원)</string>
    <string name="pre_italy_allsoles_man">이태리 전창갈이\n(가죽)(138,000원)</string>
    <string name="pre_eng_allsoles_man">영국 전창갈이\n(가죽)(158,000원)</string>
    <string name="pre_bond_man">밑창 접착 수선\n(30,000원)</string>
    <string name="pre_color_man">염색\n(110,000원)</string>
    <string name="pre_sewing_man">바느질 수선\n(35,000원)</string>
    <string name="pre_shoecare_full_woman">프리미엄 슈 풀케어\n(25,000원)</string>
    <string name="pre_deepshoecare_woman">프리미엄 슈 딥케어\n(30,000원)</string>
    <string name="pre_heel_small_woman">프리미엄 뒷굽갈이(소)\n(10,000원)</string>
    <string name="pre_heel_mid_woman">프리미엄 뒷굽갈이(중)\n(15,000원)</string>
    <string name="pre_heel_big_woman">프리미엄 뒷굽갈이(대)\n(20,000원)</string>
    <string name="pre_soles_rubber_woman">프리미엄 반창갈이\n(고무)(30,000원)</string>
    <string name="pre_vibram_soles_woman">Vibram 반창갈이\n(고무)(40,000원)</string>
    <string name="pre_all_soles">전창갈이(고무)\n(128,000원)</string>
    <string name="pre_heel_woman">프리미엄 힐 수선\n(40,000원)</string>
    <string name="pre_in_woman">프리미엄 안창갈이\n(30,000원)</string>
    <string name="pre_bond_woman">밑창 접착 수선\n(30,000원)</string>
    <string name="pre_color_woman">염색\n(110,000원)</string>
    <string name="pre_sewing_woman">바느질 수선\n(35,000원)</string>
    <string name="pre_tobacco">+담배 무료 배달\n(현금 결제만 가능)</string>
    <string name="pre_lighter">+라이터 무료 배달\n(100원)</string>
    <string name="action_example">Example action</string>
    <string name="present_service_title">현재 서비스 안내</string>
    <string name="pick_up_status">픽업</string>
    <string name="fix_status">수선/슈케어</string>
    <string name="delivery_status">배송</string>
    <string name="manager_guide_title">담당 구두장인님</string>
    <string name="call_text">문의 안내\n 지금 talk 하기</string>
    <string name="call_guide">(고객 불편사항 및 문의사항을 위해 항시 대기중에 있습니다.)</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_law">LawActivity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="kakaotalk_country_label">country ISO</string>
    <string name="content_detail2_description1">
저는 길을 걷다 지나가는 사람들의 발과 걸음걸이를 관찰하곤 합니다. 발이 벌어져 팔자걸음을 걷는 사람, 다리를 안으로 모아 걷는 사람 등 문제가 되는 보행을 하는 분들이 생각 이상으로 정말 많더라고요. 그중에서도 가장 눈에 띄는 것은 걸을 때 발의 아치가 무너져 신발의 안쪽이 안으로 푹 꺼지는 모습을 보이는 사람들입니다. 신발이 발을 감싸기만 할뿐 안정성을 주지 못하고 발의 변형을 잡아주지 못해 신발까지 심하게 변형이 되어버린 것입니다.\n\n이밖에도 발바닥과 뒤꿈치에 통증을 호소하는 환자들이 많아지고 오래 걷지 못하고 쉽게 피로함을 느끼는 등의 발에 대한 문제들이 두드러지게 나타나고 있습니다. 그만큼 신발이 우리의 발과 몸의 건강에서 중요한 부분을 차지한다고 할 수 있겠습니다. 그래서 이번에는 내 발에 맞는 올바른 신발 선택 방법을 3가지 포인트로 해서 이야기 해볼까 합니다.    </string>
    <string name="content_detail2_title2">
        #1. Pes cavus (요족)
    </string>
    <string name="content_detail2_description2">우리나라에서는 흔하지 않지만 종종 찾아볼 수 있습니다. 아치가 정상적인 발에 비해 높게 형성이 되어 오목한 형태를 보이는 발로, 발이 딱딱하고 뻣뻣하여 충격을 잘 흡수하지 못합니다.
\n\n이런 발을 가지고 있는 경우는 쿠션이 잘되어있는 신발(cushioning shoes)을 선택하는 것이 좋습니다. 또한 발목이 안쪽으로 자주 들어와 삐끗하는 경우가 많기 때문에 뒤꿈치 바깥쪽을 지지해 줄 수 있는 신발이나 깔창을 착용하는 것이 좋습니다.
    </string>
    <string name="content_detail2_title3">
    #2. Pes planus (평발)
    </string>
    <string name="content_detail2_description3">발 안쪽의 아치가 무너져 주저 앉아버려 뒤꿈치의 축도 안으로 기울어지게 되고 발의 앞쪽은 바깥으로 밀려나게 됩니다. 이 상태가 되면 보행이나 달리기를 할 때 충격을 흡수하지 못하고 추진력을 내지 못하게 되어 발의 관련된 2차적인 문제를 동반하게 될 수 있습니다.
\n\n평발이 있는 경우는 발의 안정성이 떨어진 상태이기 때문에 너무 푹신푹신하고 부드러운 신발보다는 발을 고정시켜줄 수 있는 약간은 딱딱한 소재의 신발(stability shoes, motioncontrol shoes)을 착용하는 것이 좋습니다.
\n\n뒤꿈치를 감싸는 부분이 단단하게 고정되어 있는 것이 좋으며, 밑창은 단단하여 발이 안으로 무너지는 것을 막아줄 수 있어야 합니다. 밑창이 부드러운 재질의 신발들이 많이 나오고 있는데 평발을 갖고 있는 사람들에게는 오히려 발의 통증과 문제를 악화 시킬 수 있습니다. 따라서 우리가 걸을 때 접히는 부분(발가락과 발의 연결부분, 전족부)에서의 움직임만 만들어 줄 수 있는 신발을 선택하는 것이 좋습니다.
\n\n발의 볼이 좁은 신발은 넓어진 발볼을 압박할 수 있기 때문에 볼이 넓은 신발을 고르는 것이 좋습니다. 그리고 발가락을 움직일 때 여유가 있을 정도로 본인의 발 보다 5mm정도 크게 신는 것을 권장해 드립니다.
\n\n신발 끈을 맬 때는 전체를 최대한 단단하게 꽉 매는 것 보단 앞쪽은 여유 있게 살짝 느슨하게 매주고, 발등 부분(위에서 두 번째, 세 번째)을 타이트하게 매어 발을 안정되게 유지하는 것이 좋습니다.    </string>
</resources>