<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.whatshoe.WhatShoe.PayActivity"
    android:orientation="vertical"
    android:background="#ffffff"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/color_dark_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="서비스 위치 확인"
            android:id="@+id/payTitleText"
            android:textStyle="bold"
            android:textColor="@color/color_brown" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationResult"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_brown"
        android:hint="주소를 확인하고 입력해 주세요."
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationResultDetail"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_brown"
        android:hint="상세한 주소를 입력해 주세요."
        android:textSize="14sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/color_dark_gray" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="서비스 신청 내역"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textColor="@color/color_brown" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_pay"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:textColor="@color/color_brown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 원"
            android:id="@+id/total_pay_text"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/btn_cancel"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/cancel_order"
            android:id="@+id/btn_cancel"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textColor="@color/color_brown"
            android:background="@drawable/red_round_btn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_notice"
        android:id="@+id/textView9"
        android:layout_gravity="right"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_point"
                android:id="@+id/pointPayBtn"
                android:textStyle="bold"
                android:background="@drawable/brown_round_fill_btn"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_phone"
                android:id="@+id/phonePayBtn"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/brown_round_fill_btn"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_card"
                android:id="@+id/cardPayBtn"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/brown_round_fill_btn"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
