<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.whatshoe.whatShoe.ContentDetailActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contentDetailImage"
                android:src="@drawable/main_peed2_content"
                android:adjustViewBounds="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_category"
                android:src="@drawable/content_category__btn2"
                android:layout_below="@+id/contentDetailImage"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/image_category"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="90dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_detail2_description1"
                    android:id="@+id/content_desc1"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dip"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_detail2_title2"
                    android:id="@+id/content_title2"
                    android:layout_below="@+id/image_category"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/color_bluegreen"
                    android:textSize="15dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_bluegreen"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_detail2_description2"
                    android:id="@+id/content_desc2"
                    android:textColor="#000000"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="3dip"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_detail2_title3"
                    android:id="@+id/content_title3"
                    android:layout_below="@+id/image_category"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/color_bluegreen"
                    android:textSize="15dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_bluegreen"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_detail2_description3"
                    android:id="@+id/content_desc3"
                    android:textColor="#000000"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="3dip"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/service_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_content_service"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:elevation="1dp"
        android:outlineProvider="bounds"/>

</RelativeLayout>
